# cmake-emscripten-pybind11

./: CMakeLists.txt  README.md  index.html  main.py
src/: binding.cc  library.h  pybind11_binding.cc
